@@ -1,7 +1,0 @@
-lib	f2c
-for	converting Fortran to C
-by	Feldman, Gay, Maimone, and Schryer
-editor	David Gay
-master	ornl.gov
-gams	s1
-
