@@ -1,57 +1,0 @@
-<head>
-<title>f2c</title>
-<meta name="waisindex" value="nse">
-</head>
-<h1>f2c</h1>
-<p>
-Click <A HREF="http://www.netlib.org/master_counts2.html#f2c">here</A> to see the number of accesses to this library.
-<p><hr>
-<pre>
-file	<a href="changes">changes</a>
-
-file	<a href="f2c.1">f2c.1</a>
-lang	man page
-
-file	<a href="f2c.1t">f2c.1t</a>
-lang	troff -man source for man page
-
-file	<a href="f2c.h">f2c.h</a>
-
-file	<a href="f2c.ps">f2c.ps</a>
-lang	Postscript
-
-file	<a href="f2c.pdf">f2c.pdf</a>
-
-file	<a href="fc">fc</a>
-lang	Bourne shell script
-
-file	<a href="getopt.c">getopt.c</a>
-for	Source for "getopt" command used by fc (for systems lacking getopt)
-
-file	<a href="index">index</a>
-
-file	<a href="libf77">libf77</a>
-lang	C (bundle of source)
-
-file	<a href="libi77">libi77</a>
-lang	C (bundle of source)
-
-file	<a href="libf2c.zip">libf2c.zip</a>
-for	combined libf77, libi77, with several makefile variants
-size	102 KB
-#	DO NOT REQUEST BY EMAIL, USE FTP!
-
-lib	<a href="msdos/">msdos</a>
-for	MS-DOS f2c binaries (ftp only)
-
-lib	<a href="mswin/">mswin</a>
-for	Win32 f2c binaries (ftp only)
-
-lib	<a href="src/">src</a>
-for	f2c source
-
-file	<a href="README">README</a>
-
-</pre>
-</body>
-</html>
