@@ -1,150 +1,0 @@
-<head>
-<title>f2c/src</title>
-<meta name="waisindex" value="nse">
-</head>
-<h1>f2c/src</h1>
-<p>
-Click <A HREF="http://www.netlib.org/master_counts2.html#f2c/src">here</A> to see the number of accesses to this library.
-<p><hr>
-<pre>
-#	======  index for f2c/src  ======
-#	NOTE: The E-mail request "send all from f2c/src" retrieves the
-#	complete f2c source (sans libraries).
-#	The remaining files in this directory are the component modules
-#	of "all from f2c/src", so you can request just the modules that
-#	have changed since last you updated your f2c source.  You can
-#	tell what has changed by looking at the timestamps at the end
-#	of "readme from f2c".
-
-file	<a href="cds.c">cds.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/cds.c">cds.c plus dependencies</a>
-
-file	<a href="data.c">data.c</a>
-
-file	<a href="defines.h">defines.h</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/defines.h">defines.h plus dependencies</a>
-
-file	<a href="defs.h">defs.h</a>
-
-file	<a href="equiv.c">equiv.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/equiv.c">equiv.c plus dependencies</a>
-
-file	<a href="error.c">error.c</a>
-
-file	<a href="exec.c">exec.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/exec.c">exec.c plus dependencies</a>
-
-file	<a href="expr.c">expr.c</a>
-
-file	<a href="f2c.1">f2c.1</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/f2c.1">f2c.1 plus dependencies</a>
-
-file	<a href="f2c.1t">f2c.1t</a>
-
-file	<a href="f2c.h">f2c.h</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/f2c.h">f2c.h plus dependencies</a>
-
-file	<a href="format.c">format.c</a>
-
-file	<a href="format.h">format.h</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/format.h">format.h plus dependencies</a>
-
-file	<a href="formatdata.c">formatdata.c</a>
-
-file	<a href="ftypes.h">ftypes.h</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/ftypes.h">ftypes.h plus dependencies</a>
-
-file	<a href="gram.c">gram.c</a>
-
-file	<a href="gram.dcl">gram.dcl</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/gram.dcl">gram.dcl plus dependencies</a>
-
-file	<a href="gram.exec">gram.exec</a>
-
-file	<a href="gram.expr">gram.expr</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/gram.expr">gram.expr plus dependencies</a>
-
-file	<a href="gram.head">gram.head</a>
-
-file	<a href="gram.io">gram.io</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/gram.io">gram.io plus dependencies</a>
-
-file	<a href="init.c">init.c</a>
-
-file	<a href="intr.c">intr.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/intr.c">intr.c plus dependencies</a>
-
-file	<a href="io.c">io.c</a>
-
-file	<a href="iob.h">iob.h</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/iob.h">iob.h plus dependencies</a>
-
-file	<a href="lex.c">lex.c</a>
-
-file	<a href="machdefs.h">machdefs.h</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/machdefs.h">machdefs.h plus dependencies</a>
-
-file	<a href="main.c">main.c</a>
-
-file	<a href="makefile.u">makefile.u</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/makefile.u">makefile.u plus dependencies</a>
-
-file	<a href="makefile.vc">makefile.vc</a>
-
-file	<a href="malloc.c">malloc.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/malloc.c">malloc.c plus dependencies</a>
-
-file	<a href="mem.c">mem.c</a>
-
-file	<a href="memset.c">memset.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/memset.c">memset.c plus dependencies</a>
-
-file	<a href="misc.c">misc.c</a>
-
-file	<a href="mkfile.plan9">mkfile.plan9</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/mkfile.plan9">mkfile.plan9 plus dependencies</a>
-for	making f2c under plan 9 (mk -f mkfile.plan9)
-
-file	<a href="names.c">names.c</a>
-
-file	<a href="names.h">names.h</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/names.h">names.h plus dependencies</a>
-
-file	<a href="niceprintf.c">niceprintf.c</a>
-
-file	<a href="niceprintf.h">niceprintf.h</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/niceprintf.h">niceprintf.h plus dependencies</a>
-
-file	<a href="notice">notice</a>
-
-file	<a href="output.c">output.c</a>
-
-file	<a href="output.h">output.h</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/output.h">output.h plus dependencies</a>
-
-file	<a href="p1defs.h">p1defs.h</a>
-
-file	<a href="p1output.c">p1output.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/p1output.c">p1output.c plus dependencies</a>
-
-file	<a href="parse.h">parse.h</a>
-
-file	<a href="parse_args.c">parse_args.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/parse_args.c">parse_args.c plus dependencies</a>
-
-file	<a href="pccdefs.h">pccdefs.h</a>
-
-file	<a href="pread.c">pread.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/pread.c">pread.c plus dependencies</a>
-
-file	<a href="proc.c">proc.c</a>
-
-file	<a href="put.c">put.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/put.c">put.c plus dependencies</a>
-
-file	<a href="putpcc.c">putpcc.c</a>
-
-file	<a href="sysdep.c">sysdep.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/sysdep.c">sysdep.c plus dependencies</a>
-
-file	<a href="sysdep.h">sysdep.h</a>
-
-file	<a href="sysdeptest.c">sysdeptest.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/sysdeptest.c">sysdeptest.c plus dependencies</a>
-
-file	<a href="tokens">tokens</a>
-
-file	<a href="tokdefs.h">tokdefs.h</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/tokdefs.h">tokdefs.h plus dependencies</a>
-
-file	<a href="usignal.h">usignal.h</a>
-
-file	<a href="vax.c">vax.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/vax.c">vax.c plus dependencies</a>
-
-file	<a href="version.c">version.c</a>
-
-file	<a href="xsum.c">xsum.c</a>  <a href="/cgi-bin/netlibfiles.pl?filename=/f2c/src/xsum.c">xsum.c plus dependencies</a>
-
-file	<a href="xsum0.out">xsum0.out</a>
-
-file	<a href="Notice">Notice</a>
-
-file	<a href="README">README</a>
-
-file	<a href="readme">readme</a>
-
-</pre>
-</body>
-</html>
