@@ -1,2 +1,2 @@
-char F2C_version[] = "20100827";
-char xxxvers[] = "\n@(#) FORTRAN 77 to C Translator, VERSION 20100827\n";
+char F2C_version[] = "20160102";
+char xxxvers[] = "\n@(#) FORTRAN 77 to C Translator, VERSION 20160102\n";
